#12 add ordering lock feature
